style: fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
+  margin: 0;
 }
 
 @layer utilities {
